html code updated

--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
       magnam possimus ex pariatur esse dolores amet dignissimos autem sit
       soluta.
     </p>
+    <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium rem
+      cumque rerum? Velit necessitatibus debitis, quasi similique soluta aperiam
+      vel magnam modi nobis facilis facere cumque. Quidem voluptas quasi
+      pariatur.
+    </p>
+    <button>Buy Now</button>
   </body>
 </html>
